[tool.poetry]
name = "ngrok-log-http"
version = "0.1.0"
description = ""
authors = ["Tom Marks <thomas.o.marks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyngrok = "^2.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.scripts]
ngrok-log-http = 'ngrok_log_http:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

